@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-15T01:56:01Z",
-  "count" : 3,
+  "timestamp" : "2022-09-28T08:26:08Z",
+  "count" : 2,
   "count_minmax" : [ 1, 3 ],
-  "count_decinc" : [ -0, +3 ],
-  "uniques" : 2,
+  "count_decinc" : [ -1, +3 ],
+  "uniques" : 1,
   "uniques_minmax" : [ 1, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "uniques_decinc" : [ -1, +2 ]
 }
