@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-09-28T01:49:37Z",
+  "timestamp" : "2022-09-28T08:26:08Z",
   "count_outdated" : 352,
   "uniques_outdated" : 187,
-  "count" : 387,
-  "uniques" : 208,
+  "count" : 388,
+  "uniques" : 209,
   "clones" : [
     {
       "timestamp": "2022-09-14T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
-      "uniques": 2,
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
     },
     {
@@ -102,6 +102,13 @@
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-28T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
     }
   ]
 }
