@@ -1,11 +1,11 @@
 {
-  "count": 35,
+  "count": 36,
   "uniques": 2,
   "clones": [
     {
       "timestamp": "2022-09-14T00:00:00Z",
-      "count": 3,
-      "uniques": 2
+      "count": 2,
+      "uniques": 1
     },
     {
       "timestamp": "2022-09-15T00:00:00Z",
@@ -71,6 +71,11 @@
       "timestamp": "2022-09-27T00:00:00Z",
       "count": 3,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-09-28T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
