@@ -1,3 +1,11 @@
+2022-09-28T08:26:08Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3141965209
+* notice: last 14d: unq all: 2 36
+* notice: prev accum: outdated-unq outdated-all / unq all: 187 352 / 208 387
+* notice: next accum: outdated-unq outdated-all / unq all: 187 352 / 209 388
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -1 -1 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2022-09-14 2022-09-28]
+
 2022-09-28T01:49:37Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3140255958
 * notice: last 14d: unq all: 2 35
